--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ h1 {
     background-color: rgb(238, 190, 15); 
     text-align: center;
     font-size: 4rem;
-    font-family: 'Norwester';
+    font-family: 'Bebas Neue';
     padding-top: 4rem;
     padding-bottom: 4rem;
 }
