--- a/styles.css
+++ b/styles.css
@@ -39,7 +39,7 @@ h1 {
     text-align: center;
     text-decoration: solid;
     display: inline-block;
-    font-family: 'Courier New';
+    font-family: 'Roboto Mono', monospace;
     font-size: 1rem;
     border-radius: 1rem;
     width: 10rem;
